tests/baselines/reference/asyncFunctionDeclaration5_es2017.errors.txt
tests/cases/conformance/async/es2017/functionDeclarations/asyncFunctionDeclaration5_es2017.ts(1,20): error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.


==== tests/cases/conformance/async/es2017/functionDeclarations/asyncFunctionDeclaration5_es2017.ts (1 errors) ====
    async function foo(await): Promise<void> {
                       ~~~~~
!!! error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.
    }